# libkar

./: .gitignore  CMakeLists.txt  Readme.md  kar.cpp  kar.hpp
include/: compat.hpp  export.h  kar.hpp  kar_compat.hpp
src/: kar.cpp
tests/: CMakeLists.txt  create.cpp  extract.cpp
tools/: CMakeLists.txt  kissarchive.cpp
